# pixel10-kernel-aosp

./: .c1.bazelrc  .c2.bazelrc  .c3.bazelrc  .c4.bazelrc  .c5.bazelrc  .d1.bazelrc  .d10.bazelrc  .d11.bazelrc  .d13.bazelrc  .d14.bazelrc  .d2.bazelrc  .d3.bazelrc  .d4.bazelrc  .d5.bazelrc  .d6.bazelrc  .d7.bazelrc  .d8.bazelrc  .d9.bazelrc  MODULE.bazel  aosp_manifest.xml  build_akita.sh  build_caimito.sh  build_comet.sh  build_deepspace.sh  build_felix.sh  build_gs101.sh  build_gs201.sh  build_lynx.sh  build_pantah.sh  build_rango.sh  build_raviole.sh  build_shusky.sh  build_tangorpro.sh  build_tegu.sh  build_zuma.sh  build_zumapro.sh  device.bazelrc  download_prebuilts.py  run_kunit_tests_on_device.sh  update_symbol_list.sh
private/devices/google/akita/: BUILD.bazel  Kconfig.ext.akita  akita_defconfig  build.config.akita  build_akita.sh  constants.bzl  device.bazelrc  vendor_dlkm.blocklist.akita  vendor_ramdisk.modules.akita
private/devices/google/bluejay/: BUILD.bazel  Kconfig.ext.bluejay  bluejay_defconfig  build_bluejay.sh  constants.bzl  device.bazelrc  vendor_dlkm.blocklist.bluejay  vendor_ramdisk.modules.bluejay
private/devices/google/caimito/: BUILD.bazel  Kconfig.ext.caimito  build_caimito.sh  caimito_defconfig  constants.bzl  device.bazelrc  vendor_dlkm.blocklist.caimito  vendor_ramdisk.modules.caimito
private/devices/google/comet/: BUILD.bazel  Kconfig.ext.comet  build.config.comet  build_comet.sh  comet_defconfig  constants.bzl  device.bazelrc  vendor_dlkm.blocklist.comet  vendor_ramdisk.modules.comet
private/devices/google/common/: BUILD.bazel  README.md  constants.bzl  device.bazelrc  update_symbol_list.sh
private/devices/google/felix/: BUILD.bazel  build_felix.sh  constants.bzl  device.bazelrc  vendor_dlkm.blocklist.felix  vendor_ramdisk.modules.felix
private/devices/google/gs101/: BUILD.bazel  Kconfig.ext.gs101  build.config.gs101  build_gs101.sh  constants.bzl  device.bazelrc  gs101_defconfig  vendor_dlkm.blocklist.devices  vendor_dlkm.blocklist.gs101  vendor_ramdisk.modules.gs101
private/devices/google/gs201/: BUILD.bazel  Kconfig.ext.gs201  build_gs201.sh  constants.bzl  device.bazelrc  gs201_defconfig  vendor_dlkm.blocklist.devices  vendor_dlkm.blocklist.gs201  vendor_ramdisk.modules.devices  vendor_ramdisk.modules.gs201
private/devices/google/lga/: BUILD.bazel  Kconfig.ext.lga  build.config.lga  constants.bzl  device.bazelrc  lga_defconfig  system_dlkm.blocklist.lga  vendor_dlkm.blocklist.lga  vendor_ramdisk.modules.lga
private/devices/google/lynx/: BUILD.bazel  Kconfig.ext.lynx  build_lynx.sh  constants.bzl  device.bazelrc  lynx_defconfig  vendor_dlkm.blocklist.lynx  vendor_ramdisk.modules.lynx
private/devices/google/muzel/: BUILD.bazel  Kconfig.ext.muzel  build_muzel.sh  constants.bzl  device.bazelrc  muzel_defconfig  vendor_ramdisk.modules.muzel
private/devices/google/pantah/: BUILD.bazel  Kconfig.ext.pantah  build_pantah.sh  constants.bzl  device.bazelrc  pantah_defconfig  vendor_dlkm.blocklist.pantah  vendor_ramdisk.modules.pantah
private/devices/google/rango/: BUILD.bazel  Kconfig.ext.rango  build_rango.sh  constants.bzl  device.bazelrc  rango_defconfig  vendor_ramdisk.modules.rango
private/devices/google/raviole/: BUILD.bazel  Kconfig.ext.raviole  build_raviole.sh  constants.bzl  device.bazelrc  raviole_defconfig  vendor_dlkm.blocklist.raviole  vendor_ramdisk.modules.raviole
private/devices/google/shusky/: BUILD.bazel  Kconfig.ext.shusky  build_shusky.sh  constants.bzl  device.bazelrc  shusky_defconfig  (+2 more)
private/google-modules/aoc/: BUILD.bazel  Kconfig  aoc-gsa.h  aoc-interface-gs201.h  aoc-interface-lga.h  aoc-interface-zuma.h  aoc-interface.h  aoc.c  aoc.h  aoc_channel_dev.c  aoc_char_dev.c  aoc_control_dev.c  aoc_firmware.c  aoc_firmware.h  aoc_ipc_core.c  aoc_lga.c  aoc_ramdump_regions.h  aoc_service_core.c  aoc_tbn_service_dev.c  aoc_uwb_platform_drv.c  aoc_uwb_service_dev.c  aoc_v1.c  aoc_v1.h  ion_physical_heap.c  mailbox-wc.c
private/google-modules/aoc_ipc/: BUILD.bazel  aoc_ipc_core.c
private/google-modules/bms/: BUILD.bazel  Kconfig  OWNERS  cps4041_wlc_chip.c  cps4041_wlc_chip.h  defconfig  gbms_power_supply.h  gbms_storage.c  gbms_storage.h  google_battery.c  google_bms.c  google_bms.h  google_bms_usecase.c  google_bms_usecase.h  google_ccd.c  google_charger.c  google_cpm.c  google_dc_pps.c  google_dock.c  google_dual_batt_gauge.c  google_eeprom.c  google_eeprom_02.c  google_psy.h  google_ttf.c  google_wlc.c  google_wlc.h  google_wlc_chip.c  google_wlc_chip.h  hl7132_charger.c  hl7132_charger.h  hl7132_gbms_pps.c  hl7132_regs.h  ln8282_regulator.c  ln8411_charger.h  ln8411_driver.c  ln8411_gbms_pps.c  ln8411_regs.h  max1720x.h  max1720x_battery.c  max1720x_battery.h  (+57 more)
private/google-modules/iif/: BUILD.bazel  Kconfig  iif-direct.c  iif-dma-fence.c  iif-fence-table.c  iif-fence.c  iif-fs.c  iif-manager.c  iif-platform.c  iif-signaler-submission-waiter.c  iif-sync-file.c
private/google-modules/lwis/: .clang-format  BUILD.bazel  Kconfig  lwis_allocator.c  lwis_allocator.h  lwis_buffer.c  lwis_buffer.h  lwis_bus_manager.c  lwis_bus_manager.h  lwis_bus_scheduler.c  lwis_bus_scheduler.h  lwis_clock.c  lwis_clock.h  lwis_commands.h  lwis_debug.c  lwis_debug.h  lwis_device.c  lwis_device.h  lwis_device_dpm.c  lwis_device_dpm.h  lwis_device_i2c.c  lwis_device_i2c.h  lwis_device_i2c_v2.c  lwis_device_i2c_v2.h  lwis_device_i3c_proxy.c  lwis_device_i3c_proxy.h  lwis_device_ioreg.c  lwis_device_ioreg.h  lwis_device_slc.c  lwis_device_slc.h  lwis_device_spi.c  lwis_device_spi.h  lwis_device_test.c  lwis_device_test.h  lwis_device_top.c  lwis_device_top.h  lwis_dt.c  lwis_dt.h  lwis_event.c  lwis_event.h  (+39 more)
private/google-modules/nfc/: BUILD.bazel  st21nfc.c
private/google-modules/perf/: BUILD.bazel  Kconfig
private/google-modules/powervr/: .clang-format  BUILD.bazel  Kbuild  Kconfig  Makefile  PREUPLOAD.cfg  build-tool.py  drm_nulldisp_drv.c  drm_nulldisp_drv.h  drm_nulldisp_gem.c  kernel_compatibility.h  kernel_nospec.h  pvrversion.h
private/google-modules/trusty/: .clang-format  BUILD.bazel  Makefile
(+5168 files in other folders)
