# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "checkpatch", "ddk_headers", "ddk_module", "kernel_module_group")

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

ddk_headers(
    name = "headers",
    hdrs = glob([
        "*.h",
        "uapi/*.h",
    ]),
    includes = [
        ".",
    ],
    visibility = [
        # keep sorted
        ":__subpackages__",
        "//private/google-modules/touch/common:__subpackages__",
    ],
)

filegroup(
    name = "aoc.kconfig",
    srcs = [
        "Kconfig",
    ],
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
)

ddk_module(
    name = "mailbox-wc",
    srcs = glob([
        "**/*.h",
    ]) + [
        "mailbox-wc.c",
    ],
    out = "mailbox-wc.ko",
    kernel_build = "//private/devices/google/common:kernel",
    deps = [
        "//common:all_headers_aarch64",
        "//private/google-modules/aoc_ipc:ddk_headers",
        "//private/google-modules/soc/gs:headers",
        "//private/google-modules/soc/rdo:rdo_soc_headers",
        "//private/google-modules/trusty:trusty_headers",
    ],
)

ddk_module(
    name = "aoc_core",
    srcs = glob([
        "**/*.h",
    ]) + [
        "aoc.c",
        "aoc_firmware.c",
        "aoc_ipc_core.c",
        "aoc_service_core.c",
        "ion_physical_heap.c",
    ],
    out = "aoc_core.ko",
    conditional_srcs = {
        "CONFIG_AOC_V1": {
            True: [
                "aoc_v1.c",
            ],
        },
        "CONFIG_AOC_LGA": {
            True: [
                "aoc_lga.c",
            ],
        },
    },
    kernel_build = "//private/devices/google/common:kernel",
    visibility = [
        "//private/google-modules/aoc:__subpackages__",
    ],
    deps = [
        "//common:all_headers_aarch64",
        "//private/google-modules/aoc_ipc:ddk_headers",
        "//private/google-modules/soc/gs:gs_soc_module",
        "//private/google-modules/soc/gs:headers",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa",
        "//private/google-modules/soc/rdo:rdo_soc_headers",
        "//private/google-modules/soc/rdo:rdo_soc_module",
        "//private/google-modules/trusty:trusty_headers",
    ],
)

ddk_module(
    name = "aoc_char_dev",
    srcs = glob([
        "**/*.h",
    ]) + [
        "aoc_char_dev.c",
    ],
    out = "aoc_char_dev.ko",
    kernel_build = "//private/devices/google/common:kernel",
    deps = [
        ":aoc_core",
        "//common:all_headers_aarch64",
        "//private/google-modules/aoc_ipc:ddk_headers",
        "//private/google-modules/soc/gs:headers",
        "//private/google-modules/soc/rdo:rdo_soc_headers",
        "//private/google-modules/trusty:trusty_headers",
    ],
)

ddk_module(
    name = "aoc_control_dev",
    srcs = glob([
        "**/*.h",
    ]) + [
        "aoc_control_dev.c",
    ],
    out = "aoc_control_dev.ko",
    kernel_build = "//private/devices/google/common:kernel",
    deps = [
        ":aoc_core",
        "//common:all_headers_aarch64",
        "//private/google-modules/aoc_ipc:ddk_headers",
        "//private/google-modules/soc/gs:headers",
        "//private/google-modules/soc/rdo:rdo_soc_headers",
        "//private/google-modules/trusty:trusty_headers",
    ],
)

ddk_module(
    name = "aoc_channel_dev",
    srcs = glob([
        "**/*.h",
    ]) + [
        "aoc_channel_dev.c",
    ],
    out = "aoc_channel_dev.ko",
    kernel_build = "//private/devices/google/common:kernel",
    deps = [
        ":aoc_core",
        "//common:all_headers_aarch64",
        "//private/google-modules/aoc_ipc:ddk_headers",
        "//private/google-modules/soc/gs:headers",
        "//private/google-modules/soc/rdo:rdo_soc_headers",
        "//private/google-modules/trusty:trusty_headers",
    ],
)

ddk_module(
    name = "aoc_uwb_platform_drv",
    srcs = glob([
        "**/*.h",
    ]) + [
        "aoc_uwb_platform_drv.c",
    ],
    out = "aoc_uwb_platform_drv.ko",
    kernel_build = "//private/devices/google/common:kernel",
    deps = [
        ":aoc_uwb_service_dev",
        "//common:all_headers_aarch64",
        "//private/google-modules/aoc_ipc:ddk_headers",
        "//private/google-modules/soc/gs:headers",
        "//private/google-modules/soc/rdo:rdo_soc_headers",
        "//private/google-modules/trusty:trusty_headers",
    ],
)

ddk_module(
    name = "aoc_uwb_service_dev",
    srcs = glob([
        "**/*.h",
    ]) + [
        "aoc_uwb_service_dev.c",
    ],
    out = "aoc_uwb_service_dev.ko",
    kernel_build = "//private/devices/google/common:kernel",
    deps = [
        ":aoc_core",
        "//common:all_headers_aarch64",
        "//private/google-modules/aoc_ipc:ddk_headers",
        "//private/google-modules/soc/gs:headers",
        "//private/google-modules/soc/rdo:rdo_soc_headers",
        "//private/google-modules/trusty:trusty_headers",
    ],
)

ddk_module(
    name = "aoc_tbn_service_dev",
    srcs = glob([
        "**/*.h",
    ]) + [
        "aoc_tbn_service_dev.c",
    ],
    out = "aoc_tbn_service_dev.ko",
    kernel_build = "//private/devices/google/common:kernel",
    visibility = [
        "//private/google-modules/touch/common:__subpackages__",
    ],
    deps = [
        ":aoc_core",
        "//common:all_headers_aarch64",
        "//private/google-modules/aoc_ipc:ddk_headers",
        "//private/google-modules/soc/gs:headers",
        "//private/google-modules/soc/rdo:rdo_soc_headers",
        "//private/google-modules/trusty:trusty_headers",
    ],
)

ddk_module(
    name = "aoc_unit_test_dev",
    srcs = glob([
        "**/*.h",
    ]) + [
        "aoc_unit_test_dev.c",
    ],
    out = "aoc_unit_test_dev.ko",
    kernel_build = "//private/devices/google/common:kernel",
    deps = [
        ":aoc_core",
        "//common:all_headers_aarch64",
        "//private/google-modules/aoc_ipc:ddk_headers",
        "//private/google-modules/soc/gs:headers",
        "//private/google-modules/soc/rdo:rdo_soc_headers",
        "//private/google-modules/trusty:trusty_headers",
    ],
)

kernel_module_group(
    name = "aoc",
    srcs = [
        ":aoc_channel_dev",
        ":aoc_char_dev",
        ":aoc_control_dev",
        ":aoc_core",
        ":aoc_tbn_service_dev",
        ":aoc_unit_test_dev",
        ":aoc_uwb_platform_drv",
        ":aoc_uwb_service_dev",
        ":mailbox-wc",
    ],
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
)
