# SPDX-License-Identifier: GPL-2.0-only

load("//build/kernel/kleaf:kernel.bzl", "checkpatch", "ddk_headers", "ddk_module", "kernel_module_group")

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

ddk_headers(
    name = "headers",
    hdrs = [
        "st21nfc.h",
        "//common:all_headers_aarch64",
        "//private/google-modules/soc/gs:headers",
    ],
    includes = ["."],
    visibility = [
        ":__subpackages__",
    ],
)

ddk_module(
    name = "st21nfc",
    srcs = [
        "st21nfc.c",
    ],
    out = "st21nfc.ko",
    kernel_build = "//private/devices/google/common:kernel",
    deps = [
        ":headers",
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)

kernel_module_group(
    name = "nfc",
    srcs = [
        ":st21nfc",
        "//private/google-modules/nfc/ese:st33spi",
        "//private/google-modules/nfc/ese:st54spi",
    ],
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)
